methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:3: error: too many arguments for method isFacingTrial: ()Boolean
  isFacingTrial(c)
               ^